@@ -1,20 +1,16 @@
-AUX apgdiff-1.0.0_beta12-build.xml 4096 RMD160 78ca615ba7cfb07d260ca1e84ad73f2baf346510 SHA1 bcf2ea9024a7cbdffd3a2d4407375201943b19a3 SHA256 b66aae06206766c61062d9887abcfe811cbb6b87b5bcb8c0ce869beb0a904173
-MD5 7ec4d3b260c25d212a6558022815c64d files/apgdiff-1.0.0_beta12-build.xml 4096
-RMD160 78ca615ba7cfb07d260ca1e84ad73f2baf346510 files/apgdiff-1.0.0_beta12-build.xml 4096
-SHA256 b66aae06206766c61062d9887abcfe811cbb6b87b5bcb8c0ce869beb0a904173 files/apgdiff-1.0.0_beta12-build.xml 4096
-DIST apgdiff-1.0.0_beta14-src.zip 219000 RMD160 807f6f8ae8e0ca9053140efdd0eddff6823291af SHA1 8a508f6b7c7f56b3776d58bda44eb204b3d48a3a SHA256 ca4bd19b07025e3f48ede0e77f977db9b5599be0479c7030f21cb6fad89b4955
-EBUILD apgdiff-1.0.0_beta14.ebuild 1010 RMD160 b14e71ab745f957b903391b874e9cc82e14780ad SHA1 f8bf96ef6e24d502a753d9839096c1afb0b2c311 SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759
-MD5 3b24968be9537ed36500c18870980646 apgdiff-1.0.0_beta14.ebuild 1010
-RMD160 b14e71ab745f957b903391b874e9cc82e14780ad apgdiff-1.0.0_beta14.ebuild 1010
-SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759 apgdiff-1.0.0_beta14.ebuild 1010
-MISC ChangeLog 600 RMD160 04615c945f8a52ca837dad1a7534130bd18e9c2a SHA1 88319f7a9b96312fb61d2991afd3e08bd6748e51 SHA256 554433aa0f055f8b52a854d536c847233572d85efa514972c6fe6dc068d072ec
-MD5 bc0fa81febe34be88875d40795ca72ad ChangeLog 600
-RMD160 04615c945f8a52ca837dad1a7534130bd18e9c2a ChangeLog 600
-SHA256 554433aa0f055f8b52a854d536c847233572d85efa514972c6fe6dc068d072ec ChangeLog 600
+DIST apgdiff-1.0.0_beta15-src.zip 219709 RMD160 5d0a8063f6f185f99cdf537231a57e87fc112ca7 SHA1 c5e9b4d78d9b5af31f4003f8560910664d1e79a5 SHA256 5cce37f094e99de072f97876558d8c7ce8d19a73479943992a9ff3cadf8f4655
+EBUILD apgdiff-1.0.0_beta15.ebuild 1010 RMD160 b14e71ab745f957b903391b874e9cc82e14780ad SHA1 f8bf96ef6e24d502a753d9839096c1afb0b2c311 SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759
+MD5 3b24968be9537ed36500c18870980646 apgdiff-1.0.0_beta15.ebuild 1010
+RMD160 b14e71ab745f957b903391b874e9cc82e14780ad apgdiff-1.0.0_beta15.ebuild 1010
+SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759 apgdiff-1.0.0_beta15.ebuild 1010
+MISC ChangeLog 772 RMD160 951d8eccb4e39c8a57e48d5ac139b1015d42941b SHA1 5884cb1db37720643d0209bd550bba7212a012cc SHA256 922810bf613efde6b1a7a33cf60009b5e14a69688ef2bed9e75f5fa6a746783a
+MD5 0cbb14b4173ffe523097499e1b750291 ChangeLog 772
+RMD160 951d8eccb4e39c8a57e48d5ac139b1015d42941b ChangeLog 772
+SHA256 922810bf613efde6b1a7a33cf60009b5e14a69688ef2bed9e75f5fa6a746783a ChangeLog 772
 MISC metadata.xml 217 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 SHA1 9661e29f710f8b88d1ebad0d7cfa2716ae869b51 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2
 MD5 a28ef1dbcd9ec5d985e36f5b538891b5 metadata.xml 217
 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 metadata.xml 217
 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2 metadata.xml 217
-MD5 ed61ac3b07596b74e03577fad9c1588f files/digest-apgdiff-1.0.0_beta14 265
-RMD160 2d6b9d9e6724c2535bfba7c00a13605ace2fddfd files/digest-apgdiff-1.0.0_beta14 265
-SHA256 3cf48bb644c7865016b6720966f46d413ec1cff6b778fc5dd0249a1efa0fb901 files/digest-apgdiff-1.0.0_beta14 265
+MD5 7b803f7a0c2c5a675282356d6dca41a2 files/digest-apgdiff-1.0.0_beta15 265
+RMD160 18e77609b8e3aeab1900a98e2cf3bcff60ccb1d8 files/digest-apgdiff-1.0.0_beta15 265
+SHA256 1725ae22b93e111ef95ceedae2b5ccd8f74a3394d670af3165d4f0de88cd61fa files/digest-apgdiff-1.0.0_beta15 265
