@@ -1,0 +1,3 @@
+MD5 2f78f15118cd6dc53132960e6c7ea8ce apgdiff-1.0.0_beta15-src.zip 219709
+RMD160 5d0a8063f6f185f99cdf537231a57e87fc112ca7 apgdiff-1.0.0_beta15-src.zip 219709
+SHA256 5cce37f094e99de072f97876558d8c7ce8d19a73479943992a9ff3cadf8f4655 apgdiff-1.0.0_beta15-src.zip 219709
