@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  -apgdiff-1.0.0_beta14.ebuild, +apgdiff-1.0.0_beta15.ebuild,
+  -files/apgdiff-1.0.0_beta12-build.xml:
+  Revision bump
+
   15 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org>
   -apgdiff-1.0.0_beta13.ebuild, +apgdiff-1.0.0_beta14.ebuild:
   Revision bump.
